12.2.1 features (#471)
Signed-off-by: John Bair <117694970+jbair06@users.noreply.github.com>
Signed-off-by: John Bair <john.bair@swirldslabs.com>